Show required role in UI

--- a/webroot/adm/enclave-id.html
+++ b/webroot/adm/enclave-id.html
@@ -28,7 +28,7 @@
 <ul>
     <li class="ro-opm" style="display: none"><a href="#" id="doMeta">Get Metadata</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doList">List Enclave IDs</a></li>
-    <li class="ro-opm" style="display: none"><a href="#" id="doAdd">Add Enclave ID</a></li>
+    <li class="ro-opm" style="display: none"><a href="#" id="doAdd">Add Enclave ID (PRIVILEGED)</a></li>
     <!--
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Enclave ID</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Enclave ID</a></li>
@@ -40,7 +40,7 @@
 <h3>Low Level Operations - Do Not Use Unless Necessary</h3>
 
 <ul>
-    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Enclave ID</a></li>
+    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Enclave ID (SUPER_USER)</a></li>
 </ul>
 
 <br>
