--- a/webroot/adm/operator-key.html
+++ b/webroot/adm/operator-key.html
@@ -34,11 +34,11 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doList">List Operator Keys</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doReveal">Reveal Operator Key</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doAdd">Add Operator Key</a></li>
-    <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Operator Key</a></li>
+    <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Operator Key (PRIVILEGED)</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Operator Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetSite">Update Site</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doSetOperatorType">Update Public/Private Operator Type</a></li>
-    <li class="ro-opm" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetOperatorType">Update Public/Private Operator Type (PRIVILEGED)</a></li>
+    <li class="ro-opm" style="display: none"><a href="#" id="doSetRoles">Set Roles (PRIVILEGED)</a></li>
 </ul>
 
 <br>
@@ -46,7 +46,7 @@
 <h3>Low Level Operations - Do Not Use Unless Necessary</h3>
 
 <ul>
-    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Operator Key</a></li>
+    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Operator Key (SUPER_USER)</a></li>
 </ul>
 
 <br>
