--- a/webroot/adm/partner-config.html
+++ b/webroot/adm/partner-config.html
@@ -15,7 +15,7 @@
 
 <ul>
     <li class="ro-adm" style="display: none"><a href="#" id="doGet">Get Partner Config</a></li>
-    <li class="ro-adm" style="display: none"><a href="#" id="doUpdate">Update Partner Config</a></li>
+    <li class="ro-adm" style="display: none"><a href="#" id="doUpdate">Update Partner Config (PRIVILEGED)</a></li>
 </ul>
 
 <br>
