--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -25,7 +25,7 @@
 
 <ul>
     <li class="ro-sem" style="display: none"><a href="#" id="doSnapshots">List Salt Snapshots</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doRotate">Rotate second level salts</a></li>
+    <li class="ro-sem" style="display: none"><a href="#" id="doRotate">Rotate second level salts (SUPER_USER)</a></li>
 </ul>
 
 <br>
