--- a/webroot/adm/service-links.html
+++ b/webroot/adm/service-links.html
@@ -42,7 +42,7 @@
 <h3>Low Level Operations - Do Not Use Unless Necessary</h3>
 
 <ul>
-    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service Link</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service Link (PRIVILEGED)</a></li>
 </ul>
 
 <h3>Output</h3>
