--- a/webroot/adm/services.html
+++ b/webroot/adm/services.html
@@ -32,15 +32,15 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doListAll">List Services</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doListBySite">List Services By Site Id</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doListByServiceId">Get Service By Service Id</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Service</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update Service</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Service (PRIVILEGED)</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update Service (PRIVILEGED)</a></li>
 </ul>
 
 <br>
 <h3>Low Level Operations - Do Not Use Unless Necessary</h3>
 
 <ul>
-    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service (SUPER_USER)</a></li>
 </ul>
 
 <h3>Output</h3>
