[UID2-2892] Show required endpoint roles in admin UI (#241)
* Assign new roles to endpoints and validate using okta groups

* Read role mapping from config

* Rename role ALL to Default

* Rename role from Default to Maintainer

* Use minor published snapshot version

* Change config to use maintainer role name

* Use AdminConst for storing config strings

* [CI Pipeline] Released Snapshot version: 4.7.24-SNAPSHOT

* Fix role to okta group mapping config and update tests

* Remove unnecesary class

* Allow all role access in local and e2e

* Show required role in UI

* Fix space

---------

Co-authored-by: Release Workflow <unifiedid-admin+release@thetradedesk.com>

--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -55,10 +55,10 @@
 <label for="clientContact">Contact:</label>
 <input type="text" id="clientContact" name="clientContact">
 <ul>
-    <li class="ro-cki" style="display: none"><a href="#" id="doReveal">Reveal Client Key</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doReveal">Reveal Client Key (PRIVILEGED)</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doDisable">Disable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Client Key</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles (PRIVILEGED)</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetSiteAndServiceId">
         Update Site ID and Service ID</a>
     </li>
