disable setting Key ACL and mark Key ACL overall deprecated and separate away from normal admin functionalities

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -30,7 +30,6 @@ Logged in as <span id="loginEmail"></span>
 
 <ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/client-key.html">Client Key Management</a></li>
-    <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Encryption Key ACL Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/keysets.html">Keyset Access Management</a></li>
     <li class="ro-sem" style="display: none"><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
     <li class="ro-sem" style="display: none"><a href="/adm/salt.html">Salts Management</a></li>
@@ -42,7 +41,10 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-adm" style="display: none"><a href="/adm/search.html">Key and Secret Search</a></li>
     <li class="ro-nil" style="display: none">No Admin Permissions</li>
 </ul>
-
-
+<br/>
+<h3>Deprecated</h3>
+<ul>
+    <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Encryption Key ACL Management</a></li>
+</ul>
 </body>
 </html>
