--- a/webroot/adm/key-acl.html
+++ b/webroot/adm/key-acl.html
@@ -4,13 +4,14 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin - Key ACL Management</h1>
+<h1><b>Deprecated</b>: UID2 Admin - Key ACL Management</h1>
+
+<h2 style="color: red"><a href="https://atlassian.thetradedesk.com/jira/browse/UID2-2758">UID2-2758</a>: Key ACL entries must no longer be created. Read only by legacy operators now.</h2>
 
 <a href="/">Back</a>
 
-<br>
-<br>
 
+<!--
 <h3>Inputs</h3>
 
 <label for="siteId">Site Id:</label>
@@ -24,7 +25,7 @@
     <option value="whitelist">whitelist</option>
     <option value="blacklist">blacklist</option>
 </select>
-
+-->
 <br>
 <br>
 
@@ -32,8 +33,8 @@
 
 <ul>
     <li class="ro-cki" style="display: none"><a href="#" id="doList">List ACLs</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doReset">Reset ACL</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update ACL</a></li>
+<!--    <li class="ro-cki" style="display: none"><a href="#" id="doReset">Reset ACL</a></li>-->
+<!--    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update ACL</a></li>-->
 </ul>
 
 <br>
