Moved deprecated header to the actual item otherwise Deprecated header will appear in login screen

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -42,9 +42,8 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-nil" style="display: none">No Admin Permissions</li>
 </ul>
 <br/>
-<h3>Deprecated</h3>
 <ul>
-    <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Encryption Key ACL Management</a></li>
+    <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Deprecated: Encryption Key ACL Management</a></li>
 </ul>
 </body>
 </html>
