Updated the buttons to show the selected one

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -5,54 +5,6 @@
     <script src="/js/main.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .geo {
-            display: none;
-        }
-
-        .geo .marquee {
-            height: 25px;
-            width: 420px;
-
-            overflow: hidden;
-            position: relative;
-        }
-
-        .geo .marquee div {
-            display: block;
-            width: 200%;
-            height: 30px;
-
-            position: absolute;
-            overflow: hidden;
-
-            animation: marquee 5s linear infinite;
-        }
-
-        .geo .marquee span {
-            float: left;
-            width: 50%;
-        }
-
-        @keyframes marquee {
-            0% {
-                left: 0;
-            }
-
-            100% {
-                left: -100%;
-            }
-        }
-
-        .geo .gif {
-            float: left;
-            height: 50px !important;
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -82,15 +34,15 @@
                 <div class="card card-body">
                     <div class="row py-1">
                         <div class="col">
-                            <h5>Search for existing participants</h5>
+                            <h5>Search for existing participants:</h5>
                         </div>
                     </div>
                     <div class="row align-items-end">
                         <div class="col">
                             <div class="form-group">
-                                <label for="participantName">Participant name</label>
+                                <label for="participantName">Participant / Client name</label>
                                 <input type="text" class="form-control" id="participantName"
-                                    placeholder="Leave empty for all participants">
+                                    placeholder="Leave empty for all participants / clients">
                             </div>
                         </div>
                         <div class="col">
@@ -102,7 +54,7 @@
                             <h5>Search Results:</h5>
                         </div>
                     </div>
-                    <div class="row px-2">
+                    <div class="row px-2 table-responsive">
                         <table class="table table-bordered">
                             <thead>
                                 <th scope="col" class="col-1">Sites</th>
@@ -128,25 +80,26 @@
                         <div class="col">
                             <div class="row">
                                 <h5>Update Operations:</h5>
-
+                            </div>
+                            <div class="row">
+                                <div>
+                                    Use this to create new site, update existing sites or create new clients.
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col">
                                     <button type="button" aria-controls="createSiteRegion" aria-expanded="false"
-                                        id="createSite" data-bs-parent="#siteParent" class="btn btn-primary"
+                                        id="createSite" data-bs-parent="#siteParent" class="btn btn-secondary group"
                                         data-bs-toggle="collapse" data-bs-target="#createSiteRegion"
-                                        role="button">Create
-                                        site</button>
+                                        role="button">Create site</button>
                                     <button type="button" aria-controls="updateSiteRegion" aria-expanded="false"
-                                        id="updateSite" data-bs-parent="#siteParent" class="btn btn-primary"
+                                        id="updateSite" data-bs-parent="#siteParent" class="btn btn-secondary group"
                                         data-bs-toggle="collapse" data-bs-target="#updateSiteRegion"
-                                        role="button">Update
-                                        site</button>
+                                        role="button">Update site</button>
                                     <button type="button" aria-controls="createClientRegion" aria-expanded="false"
-                                        id="createClient" data-bs-parent="#siteParent" class="btn btn-primary"
+                                        id="createClient" data-bs-parent="#siteParent" class="btn btn-secondary group"
                                         data-bs-toggle="collapse" data-bs-target="#createClientRegion"
-                                        role="button">Create
-                                        client</button>
+                                        role="button">Create client</button>
 
                                 </div>
                             </div>
@@ -256,8 +209,7 @@
                                                         aria-label="Warning:">
                                                         <use xlink:href="#exclamation-triangle-fill" />
                                                     </svg>
-                                                    <pre id="updateSite-searchOutput-ErrorDiv">
-                                        </pre>
+                                                    <pre id="updateSite-searchOutput-ErrorDiv"></pre>
                                                 </div>
                                             </div>
 
@@ -413,8 +365,7 @@
                                                             to copy this.
                                                         </div>
                                                         <div class="alert alert-dark">
-                                                            <pre id="fullClientOutputSpace"
-                                                                class="user-select-none form-clear"></pre>
+                                                            <pre id="fullClientOutputSpace" class="user-select-none form-clear"></pre>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -429,14 +380,6 @@
                                 </div>
                             </div>
 
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <div class="col">
-                                </div>
-                            </div>
-                            <div id="clientParent" class="col">
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -463,12 +406,7 @@
                 const url = `/api/site/add?name=${name}&types=${clientTypes}&description=${description}`;
 
                 doApiCallWithCallback("POST", url, (text) => {
-                    document.getElementById("createSiteRegion").addEventListener("hidden.bs.collapse", function () {
-                        $("#createSiteRegion").collapse('show');
-                        $("#createSiteOutput").collapse('show');
-                    }, { once: true });
-
-                    clearForms();
+                    clearFormsAndShowCollapsed(["#createSiteRegion", "#createSiteOutput"]);
                     const site = JSON.parse(text);
                     const alertMessage = `Created site for [${site.name}] with site ID [${site.id}]`;
 
@@ -542,11 +480,8 @@ ${alertMessage}
 
 ${JSON.stringify(site, null, 2)} `;
 
+                            clearFormsAndShowCollapsed(["#updateSiteRegion", "#updateSite-workflow-afterSearch", "#updateSiteOutput"])
                             $("#siteUpdateJira").text(outputMessage);
-                            $("#updateSiteRegion").collapse('show');
-                            $("#updateSite-workflow-afterSearch").collapse('show');
-                            $("#updateSiteOutput").collapse('show');
-
                         },
                         (err) => alertErrorCallback(err, "#updateSiteError", "#updateSiteErrorAlert")
                     ),
@@ -573,16 +508,7 @@ ${JSON.stringify(site, null, 2)} `;
                 const url = `/api/client/add?name=${name}&roles=${roles}&site_id=${siteId}&service_id=0`;
 
                 doApiCallWithCallback("POST", url, (text) => {
-                    document.getElementById("createClientRegion").addEventListener("hidden.bs.collapse", function () {
-                        $("#createClientRegion").collapse('show');
-                        $("#createClientOutput").collapse('show');
-                    }, { once: true });
-                    document.getElementById("createClientOutput").addEventListener("hidden.bs.collapse", function () {
-                        $("#createClientRegion").collapse('show');
-                        $("#createClientOutput").collapse('show');
-                    }, { once: true });
-
-                    clearForms();
+                    clearFormsAndShowCollapsed(["#createClientRegion", "#createClientOutput"]);
                     const client = JSON.parse(text);
 
                     const alertMessage = `Created API key for [${client.authorizable.name}] under site ID [${client.authorizable.site_id}]`;
@@ -631,13 +557,13 @@ ${JSON.stringify(client, null, 2)} `;
                 }, (err) => standardErrorCallback(err, `#${type}SearchOutput`));
             }
 
-            const clearForms = () => {
+            /*const clearForms = () => {
                 $(".form-clear").text("");
                 $('.collapse').collapse('hide');
                 $("#createSiteForm").trigger("reset");
                 $("#updateSiteForm").trigger("reset");
                 $("#createClientForm").trigger("reset");
-            }
+            }*/
 
             $("#copyTradeSecret").on("click", () => {
                 const text = $("#tradeSecretSpace").text();
