Clear the table before adding new rows

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -34,6 +34,20 @@
                 <div class="card card-body">
                     <div class="row py-1">
                         <div class="col">
+                            <h4>Instructions</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ol>
+                                <li>First seach for a participant with the requested name from the Jira ticket.</li>
+                                <li>If a site exists use the Site Id to update the site if necessary.</li>
+                                <li>Use the Site Id to create a client API key and secret if necessary.</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="row py-1">
+                        <div class="col">
                             <h5>Search for existing participants:</h5>
                         </div>
                     </div>
@@ -54,21 +68,33 @@
                             <h5>Search Results:</h5>
                         </div>
                     </div>
+                    <div class="row pt-3 px-2 collapse" id="searchSiteNoSiteFoundAlert">
+                        <div class="alert alert-warning d-flex align-items-center pt-3" role="alert">
+                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+                                <use xlink:href="#exclamation-triangle-fill" />
+                            </svg>
+                            <div>
+                                No site found
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row pt-3 px-2 collapse" id="searchSiteErrorAlert">
+                        <div class="alert alert-danger d-flex align-items-center pt-3" role="alert">
+                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+                                <use xlink:href="#exclamation-triangle-fill" />
+                            </svg>
+                            <div id="searchOutputErrorDiv">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row px-2 table-responsive">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" id="searchResultsTable">
                             <thead>
                                 <th scope="col" class="col-1">Sites</th>
                                 <th scope="col" class="col-1">Clients</th>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <pre id="siteSearchOutput"></pre>&nbsp;
-                                    </td>
-                                    <td>
-                                        <pre id="clientSearchOutput"></pre>&nbsp;
-                                    </td>
-                                </tr>
+                            <tbody id="searchResultsTableBody">
                             </tbody>
                         </table>
                     </div>
@@ -81,7 +107,7 @@
                             <div class="row">
                                 <h5>Update Operations:</h5>
                             </div>
-                            <div class="row">
+                            <div class="row py-2">
                                 <div>
                                     Use this to create new site, update existing sites or create new clients.
                                 </div>
@@ -365,7 +391,8 @@
                                                             to copy this.
                                                         </div>
                                                         <div class="alert alert-dark">
-                                                            <pre id="fullClientOutputSpace" class="user-select-none form-clear"></pre>
+                                                            <pre id="fullClientOutputSpace"
+                                                                class="user-select-none form-clear"></pre>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -392,13 +419,10 @@
             $("#searchParticipant").on("click", () => {
                 const name = $("#participantName").val();
 
-                search("site", name);
-                search("client", name);
+                search(name);
             });
 
             $("#createSite-workflow-submit").on("click", () => {
-                $("#siteSearchOutput").text("");
-
                 const name = encodeURIComponent($("#createSite-workflow-name").val());
                 const clientTypes = $("input[name='createSite-workflow-clientTypes[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
                 const description = encodeURIComponent($("#createSite-workflow-description").val());
@@ -537,33 +561,49 @@ ${JSON.stringify(client, null, 2)} `;
                 }, (err) => alertErrorCallback(err, "#createClientError", "#createClientErrorAlert"));
             });
 
-            const search = (type, name) => {
-                $(`#${type} SearchOutput`).collapse('show');
+            const search = (name) => {
+                $("#searchSiteNoSiteFoundAlert").collapse('hide');
+                $("#searchSiteErrorAlert").collapse('hide');
+                $("#searchResultsTableBody").empty();
 
-                doApiCallWithCallback("GET", `/api/${type}/list`, (text) => {
+                doApiCallWithCallback("GET", "/api/site/list", (text) => {
                     const searchList = JSON.parse(text);
 
-                    const similarList = searchList.filter((obj) => obj.name.toLowerCase().includes(name.toLowerCase()));
-                    if (similarList.length === 0) {
-                        $(`#${type}SearchOutput`).text("No results");
-                    } else {
-                        searchList.forEach((obj) => {
-                            if (obj.hasOwnProperty("created")) {
-                                obj.createDateTime = new Date(obj.created * 1000); //convert epoch seconds to milliseconds
-                            }
-                        })
-                        $(`#${type}SearchOutput`).text(JSON.stringify(similarList, null, 2));
-                    }
-                }, (err) => standardErrorCallback(err, `#${type}SearchOutput`));
-            }
+                    const foundSites = searchList.filter((obj) => obj.name.toLowerCase().includes(name.toLowerCase()));
+                    if (foundSites.length === 0) {
+                        $("#searchSiteNoSiteFoundAlert").collapse('show');
 
-            /*const clearForms = () => {
-                $(".form-clear").text("");
-                $('.collapse').collapse('hide');
-                $("#createSiteForm").trigger("reset");
-                $("#updateSiteForm").trigger("reset");
-                $("#createClientForm").trigger("reset");
-            }*/
+                    } else {
+                        doApiCallWithCallback("GET", "/api/client/list", (clientsData) => {
+                            const allClients = JSON.parse(clientsData);
+
+                            foundSites.forEach((site) => {
+                                site.createDateTime = new Date(site.created * 1000) //show the created as a date time
+                                const foundClients = allClients.filter((client) => client.site_id == site.id);
+                                var rowToAdd;
+                                if (foundClients.length != 0) {
+                                    foundClients.forEach((client) => {
+                                        client.createDateTime = new Date(client.created * 1000);
+                                    })
+
+                                    // add the site and all its clients
+                                    const rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre>${JSON.stringify(foundClients, null, 2)}</pre></td></tr>`;
+                                } else {
+                                    // add just the client
+                                    rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre></pre></td></tr>`;
+                                }
+
+                                if ($("#searchResultsTableBody").length == 1) {
+                                    $("#searchResultsTableBody").append(rowToAdd);
+                                } else {
+                                    $("#searchResultsTableBody tr:last").after(rowToAdd);
+                                }
+
+                            })
+                        }, (err) => alertErrorCallback(err, "#searchOutputErrorDiv", "#searchSiteErrorAlert"));
+                    }
+                }, (err) => alertErrorCallback(err, "#searchOutputErrorDiv", "#searchSiteErrorAlert"));
+            }
 
             $("#copyTradeSecret").on("click", () => {
                 const text = $("#tradeSecretSpace").text();
