--- a/webroot/adm/oncall/search.html
+++ b/webroot/adm/oncall/search.html
@@ -56,7 +56,7 @@
                 var keyString = $('#key').val();
                 const url = '/api/search';
 
-                doApiCallWithBody('POST', url, keyString, '#standardOutput', '#errorOutput');
+                doApiCall('POST', url, '#standardOutput', '#errorOutput', keyString);
             });
         });
 
