Added some missing javascript deleted in the merge

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -496,7 +496,7 @@ ${JSON.stringify(site, null, 2)}`;
 
                             const site = JSON.parse(text);
 
-                            const alertMessage = `Updated site [${site.name}] with site ID[${site.id}]`;
+                            const alertMessage = `Updated site [${site.name}] with site ID [${site.id}]`;
 
                             const outputMessage = `\
 ${alertMessage}
@@ -587,7 +587,7 @@ ${JSON.stringify(client, null, 2)} `;
                                     })
 
                                     // add the site and all its clients
-                                    const rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre>${JSON.stringify(foundClients, null, 2)}</pre></td></tr>`;
+                                    rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre>${JSON.stringify(foundClients, null, 2)}</pre></td></tr>`;
                                 } else {
                                     // add just the client
                                     rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre></pre></td></tr>`;
