Added the ability to click on a site and populate the id

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -4,6 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/js/main.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -125,7 +126,7 @@
                                     <button type="button" aria-controls="createClientRegion" aria-expanded="false"
                                         id="createClient" data-bs-parent="#siteParent" class="btn btn-secondary group"
                                         data-bs-toggle="collapse" data-bs-target="#createClientRegion"
-                                        role="button">Create client</button>
+                                        role="button">Create new Client API Key and Secret</button>
 
                                 </div>
                             </div>
@@ -415,6 +416,11 @@
     </div>
 
     <script language="JavaScript">
+        function setSiteId(siteId) {
+            $("#updateSite-workflow-siteId").val(siteId);
+            $("#createClient-workflow-siteId").val(siteId);
+        }
+
         $(document).ready(() => {
             $("#searchParticipant").on("click", () => {
                 const name = $("#participantName").val();
@@ -587,10 +593,10 @@ ${JSON.stringify(client, null, 2)} `;
                                     })
 
                                     // add the site and all its clients
-                                    rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre>${JSON.stringify(foundClients, null, 2)}</pre></td></tr>`;
+                                    rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(foundClients, null, 2)}</pre></a></td></tr>`;
                                 } else {
                                     // add just the client
-                                    rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre></pre></td></tr>`;
+                                    rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><pre></pre></td></tr>`;
                                 }
 
                                 if ($("#searchResultsTableBody").length == 1) {
@@ -599,6 +605,12 @@ ${JSON.stringify(client, null, 2)} `;
                                     $("#searchResultsTableBody tr:last").after(rowToAdd);
                                 }
 
+                            })
+
+                            $('#searchResultsTableBody a').on("click", (e) => {
+                                const siteId =e.target.parentElement.getAttribute('siteIdData');
+                                setSiteId(siteId);
+                                return false;
                             })
                         }, (err) => alertErrorCallback(err, "#searchOutputErrorDiv", "#searchSiteErrorAlert"));
                     }
