--- a/webroot/adm/oncall/generate-cstg-keypair.html
+++ b/webroot/adm/oncall/generate-cstg-keypair.html
@@ -4,6 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/js/main.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -354,6 +355,11 @@
         </div>
 
         <script language="JavaScript">
+            function setSiteId(siteId) {
+                $("#updateSite-workflow-siteId").val(siteId);
+                $("#createKeypair-workflow-siteId").val(siteId);
+            }
+
             $(document).ready(() => {
                 $("#searchParticipant").on("click", () => {
                     $("#searchSiteNoSiteFoundAlert").collapse('hide');
@@ -376,7 +382,7 @@
                                 similarList.forEach((site) => {
                                     const siteId = site.id;
                                     const siteKeyPairs = keypairs.filter((keypair) => keypair.site_id == siteId);
-                                    const rowToAdd = `<tr><td><pre>${JSON.stringify(site, null, 2)}</pre></td><td><pre>${JSON.stringify(siteKeyPairs, null, 2)}</pre></td></tr>`;
+                                    const rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(siteKeyPairs, null, 2)}</pre></a></td></tr>`;
 
                                     if ($("#searchResultsTableBody").length == 1) {
                                         $("#searchResultsTableBody").append(rowToAdd);
@@ -384,6 +390,13 @@
                                         $("#searchResultsTableBody tr:last").after(rowToAdd);
                                     }
                                 })
+
+                                $('#searchResultsTableBody a').on("click", (e) => {
+                                const siteId =e.target.parentElement.getAttribute('siteIdData');
+                                setSiteId(siteId);
+                                return false;
+                            })
+
                             }, (err) => alertErrorCallback(err, "#searchOutputErrorDiv", "#searchSiteErrorAlert"));
                         }
                     }, (err) => alertErrorCallback(err, "#searchOutputErrorDiv", "#searchSiteErrorAlert"));
