--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -2,10 +2,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/css/style.css" rel="stylesheet">
-    <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -338,13 +336,27 @@
                                                 </div>
                                                 <div class="pt-3">
                                                     Roles:
-                                                    <select id="createClient-workflow-roles" class="form-select">
-                                                        <option value="" selected>Please select a role...</option>
-                                                        <option value="GENERATOR">GENERATOR - for publishers</option>
-                                                        <option value="MAPPER">MAPPER - for advertisers, data providers
-                                                        </option>
-                                                        <option value="ID_READER">ID_READER - for DSPs</option>
-                                                    </select>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input type="checkbox" id="createClient-workflow-roles-GENERATOR"
+                                                        class="form-check-input" name="createClient-workflow-roles[]"
+                                                        value="GENERATOR">
+                                                    <label for="createClient-workflow-roles-GENERATOR">GENERATOR - for
+                                                        publishers123</label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input type="checkbox" id="createClient-workflow-roles-MAPPER"
+                                                        class="form-check-input" name="createClient-workflow-roles[]"
+                                                        value="MAPPER">
+                                                    <label for="createClient-workflow-roles-GENERATOR">MAPPER - for
+                                                        publishers</label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input type="checkbox" id="createClient-workflow-roles-ID_READER"
+                                                        class="form-check-input" name="createClient-workflow-roles[]"
+                                                        value="ID_READER">
+                                                    <label for="createClient-workflow-roles-GENERATOR">ID_READER - for
+                                                        advertisers, data providers</label>
                                                 </div>
                                                 <div class="form-check pt-3 pb-2">
                                                     <input type="checkbox" class="form-check-input"
@@ -529,7 +541,9 @@ ${JSON.stringify(site, null, 2)} `;
                 $("#clientSearchOutput").text("");
 
                 const name = encodeURIComponent($("#createClient-workflow-name").val());
-                let roles = encodeURIComponent($("#createClient-workflow-roles").val());
+
+                var roles = $("input[name='createClient-workflow-roles[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
+
                 if (isSharerRoleChecked) {
                     roles += ",SHARER";
                 }
@@ -587,16 +601,21 @@ ${JSON.stringify(client, null, 2)} `;
                                 site.createDateTime = new Date(site.created * 1000) //show the created as a date time
                                 const foundClients = allClients.filter((client) => client.site_id == site.id);
                                 var rowToAdd;
+                                const siteId = site.id;
+                                const siteJson = JSON.stringify(site, null, 2).replace('"id": ' + siteId, `<a href='#' siteIdData='${siteId}'>"id": ${siteId}</a>`);
+
                                 if (foundClients.length != 0) {
                                     foundClients.forEach((client) => {
                                         client.createDateTime = new Date(client.created * 1000);
                                     })
 
+                                    const clientsJson = JSON.stringify(foundClients, null, 2).replace('"site_id": ' + siteId, `<a href='#' siteIdData='${siteId}'>"site_id": ${siteId}</a>`);
+
                                     // add the site and all its clients
-                                    rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(foundClients, null, 2)}</pre></a></td></tr>`;
+                                    rowToAdd = `<tr><td><pre>${siteJson}</pre></td><td><pre>${clientsJson}</pre></td></tr>`;
                                 } else {
                                     // add just the client
-                                    rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><pre></pre></td></tr>`;
+                                    rowToAdd = `<tr><td><pre>${siteJson}</pre></td><td><pre></pre></td></tr>`;
                                 }
 
                                 if ($("#searchResultsTableBody").length == 1) {
@@ -608,7 +627,7 @@ ${JSON.stringify(client, null, 2)} `;
                             })
 
                             $('#searchResultsTableBody a').on("click", (e) => {
-                                const siteId =e.target.parentElement.getAttribute('siteIdData');
+                                const siteId = e.target.getAttribute('siteIdData');
                                 setSiteId(siteId);
                                 return false;
                             })
@@ -635,7 +654,8 @@ ${JSON.stringify(client, null, 2)} `;
             });
         });
     </script>
-
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
