--- a/webroot/adm/oncall/generate-cstg-keypair.html
+++ b/webroot/adm/oncall/generate-cstg-keypair.html
@@ -2,10 +2,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/css/style.css" rel="stylesheet">
-    <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -382,7 +380,9 @@
                                 similarList.forEach((site) => {
                                     const siteId = site.id;
                                     const siteKeyPairs = keypairs.filter((keypair) => keypair.site_id == siteId);
-                                    const rowToAdd = `<tr><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(site, null, 2)}</pre></a></td><td><a href='#' siteIdData='${site.id}' class='hideLink'><pre>${JSON.stringify(siteKeyPairs, null, 2)}</pre></a></td></tr>`;
+                                    const siteJson = JSON.stringify(site, null, 2).replace('"id": ' + siteId, `<a href='#' siteIdData='${siteId}'>"id": ${siteId}</a>`);
+                                    const keypairJson = JSON.stringify(siteKeyPairs, null, 2).replace('"site_id": ' + siteId, `<a href='#' siteIdData='${siteId}'>"site_id": ${siteId}</a>`);
+                                    const rowToAdd = `<tr><td><pre>${siteJson}</pre></td><td><pre>${keypairJson}</pre></td></tr>`;
 
                                     if ($("#searchResultsTableBody").length == 1) {
                                         $("#searchResultsTableBody").append(rowToAdd);
@@ -392,7 +392,7 @@
                                 })
 
                                 $('#searchResultsTableBody a').on("click", (e) => {
-                                const siteId =e.target.parentElement.getAttribute('siteIdData');
+                                const siteId =e.target.getAttribute('siteIdData');
                                 setSiteId(siteId);
                                 return false;
                             })
@@ -642,6 +642,8 @@ ${JSON.stringify(keypair, null, 2)}`;
                 }
             });
         </script>
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
